--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 col-form-label">
-                    <a class="btn btn-lg btn-info text-nowrap" href="#reservecampsite">
+                    <a class="btn btn-lg btn-info text-nowrap" href="#reservecampsite" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br/><strong>1-206-555-1234</strong>">
                        Reserve Campsite
                     </a>
                     
@@ -171,6 +171,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 
 </body>
 </html>
