--- a/what.html
+++ b/what.html
@@ -19,7 +19,6 @@
     <title>Nucamp: A Better Way To Camp</title>
 </head>
 <body>
-<!--Jumbotron-->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -30,74 +29,16 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-lg btn-info text-nowrap" data-toggle="modal" href="#reserveModal">
+                <div class="col-md-4 col-xl-2">
+                    <a class="btn btn-lg btn-info text-nowrap" href="#reservecampsite" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br/><strong>1-206-555-1234</strong>">
                        Reserve Campsite
                     </a>
                     
                 </div>
             </div>
         </div>
-
     </header>
 
-<!--Reserve Campsite Modal Workshop 3-->
-    <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" row="document">
-            <div class="modal-content">
-                <div class="modal-header bg-info text-white">
-                    <h3 class="modal-title">Reserve a Campsite</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form>
-                            <div class="form-group row">
-                                <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers</label>
-                                <div class="col">
-                                    <select name="numCampers" id="numCampers" class="form-control">
-                                        <option value="">Select...</option>
-                                        <option value="">1</option>
-                                        <option value="">2</option>
-                                        <option value="">3</option>
-                                        <option value="">4</option>
-                                        <option value="">5</option>
-                                        <option value="">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col">
-                                    <input type="date" id="date" name="date" class="form-control" placeholder="Date">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="campsiteType" class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label for="tent" class="btn btn-success">
-                                    <input type="radio" name="siteType" id="siteTent" class="form-control" value="tent" autocomplete="off" checked> Tent
-                                    </label>
-                                    <label for="rv" class="btn btn-primary">
-                                    <input type="radio" name="siteType" id="siteRV" class="form-control" value="RV" autocomplete="off"> RV
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-primary">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-<!--Navbar with Login Modal-->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30"></a>
@@ -119,7 +60,7 @@
             </div>
         </div>
     </nav>
-<!--Login Modal on nav-->
+
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" row="document">
             <div class="modal-content">
@@ -147,6 +88,7 @@
                                 </div>
                             </div>
                             <div class="form-row">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
                                 <button type="button" class="btn btn-primary btn-sm ml-1" data-dismiss="modal">Sign in</button>
                             </div>
                         </form>
@@ -157,7 +99,6 @@
         </div>
     </div>
     
-<!--Carousel-->
     <div class="container">
 
         <div class="row row-content">
@@ -172,7 +113,7 @@
                         <div class="carousel-item active">
                             <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" class="d-block w-100">
                             <div class="carousel-caption">
-                                <h3>Breadcrumb Trail Campground</h3>
+                                <h3>Breadcrumb Trail Cmapground</h3>
                                 <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground</p>
                             </div>
                         </div>
@@ -202,7 +143,7 @@
                 </div>
             </div>
         </div>
-<!--Discover and Review / Our Campsites-->
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
@@ -217,7 +158,7 @@
                 </div>
             </div>
         </div>
-<!--Featured Campsites / React Lake Campground-->
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2 class="text-sm-right">Featured Campsites</h2>
@@ -232,7 +173,7 @@
                 </div>
             </div>
         </div>
-<!--Our Community Partners / Bootstrap Outfitters-->
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Our Community Partners</h2>
@@ -247,8 +188,8 @@
             </div>
             </div>
         </div>
-    <!--Reserve a Campsite Modal-->
-       <!-- <div class="row row-content">
+    <!--TASK 2-->
+        <div class="row row-content">
             <div class="col-sm-6 mx-auto">
                 <div class="card">
                     <h3 class="card-header bg-info text-white" id="reservecampsite">Reserve a Campsite</h3>
@@ -280,14 +221,13 @@
                                 </div>
                             </div>
                         </form>
-                    </div> -->
+                    </div>
         <!--TASK 2 END -->
                 </div>
             </div>
         </div>
     </div>
 
-    <!--Footer-->
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -302,10 +242,10 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a class="btn btn-social-icon btn-google" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
                     <a role="button" class="btn btn-link" href="tel:+155555555555"><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a><br>
@@ -319,11 +259,11 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-   <!-- <script>
+   <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-    </script> -->
+    </script> 
 
 </body>
 </html>
