NPM Scripts Part 2

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--Bootstrap, Fonts, Custom CSS-->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+   <!-- build:css css/main.css -->
+   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+   <link rel="stylesheet" href="/css/styles.css">
+    <!-- endbuild -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -227,10 +229,11 @@
         </div>
     </footer>
 
-    <!--jqyery, popper, bootstrap js-->
+     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--endbuild-->
 </body>
 
 </html>
